fix: corrects core service configuration

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,6 @@
 #=======================================
 SERVICE_TAG=latest
 IP_ADDRESS=localhost
-FINANCE_SERVICE_PORT=8085
-REPORTS_SERVICE_PORT=8081
 
 #=======================================
 # KEYCLOAK
@@ -12,6 +10,7 @@ REPORTS_SERVICE_PORT=8081
 KEYCLOAK_DB=keycloak_db
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=password
+
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
 
@@ -23,7 +22,7 @@ KEYCLOAK_AUTHORITY=http://keycloak:8080/realms/${KEYCLOAK_POUPEAI_REALM}
 KEYCLOAK_AUDIENCE=account
 
 # Listener do Keycloak
-CORE_SERVICE_URL=http://finances-service:8000/api/internal/profiles
+CORE_SERVICE_URL=http://core-service:8000/api/internal/profiles
 INTERNAL_API_KEY=chave-secreta
 INTERNAL_HEADER_NAME=x-api-key
 
@@ -36,11 +35,7 @@ POUPE_AI_BACKEND_CLIENT_SECRET=backend-secret
 #=======================================
 # DATABASE & CACHE
 #=======================================
-FINANCE_DB=poupeai_finance_db
-FINANCE_DB_USER=finance_user
-FINANCE_DB_PASSWORD=finance_user_password
-
-DB_HOST=localhost
+DB_HOST=core-db
 DB_PORT=5432
 DB_NAME=core_db
 DB_USER=postgres
@@ -64,7 +59,7 @@ GEMINI_API_KEY=key
 DEEPSEEK_API_KEY=key
 REPORT_DB_CONNECTION_STRING=mongodb://...
 REPORT_DB_NAME=reports_db
-FINANCES_SERVICE_BASE_URL=http://finances-service:8000
+FINANCES_SERVICE_BASE_URL=http://core-service:8000
 FINANCES_SERVICE_TRANSACTIONS_ENDPOINT=/api/v1/transactions/
 FINANCES_SERVICE_CATEGORY_ENDPOINT=/api/v1/categories/
 
