--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -153,8 +153,8 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       INTERNAL_API_KEY: ${INTERNAL_API_KEY}
-      KEYCLOAK_URL: ${KEYCLOAK_SERVER_URL}
-      KEYCLOAK_POUPEAI_REALM: ${KEYCLOAK_REALM}
+      KEYCLOAK_ISSUER: ${KEYCLOAK_ISSUER}
+      KEYCLOAK_JWKS_URL: ${KEYCLOAK_JWKS_URL}
     depends_on:
       core-db:
         condition: service_healthy
