chore: update ci/cd

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,18 +27,18 @@ jobs:
               echo "Diretório 'poupeai-infra' corrompido. Recriando..."
               if [ -f "poupeai-infra/.env" ]; then
                 echo "Backup do arquivo .env realizado."
-                sudo mv poupeai-infra/.env ./poupeai-infra.env.bak
+                mv poupeai-infra/.env ./poupeai-infra.env.bak
               fi
-              sudo rm -rf poupeai-infra
+              rm -rf poupeai-infra
               git clone ${{ env.INFRA_REPO_URL }} poupeai-infra
               if [ -f "./poupeai-infra.env.bak" ]; then
                 echo "Restaurando o arquivo .env."
-                sudo mv ./poupeai-infra.env.bak poupeai-infra/.env
+                mv ./poupeai-infra.env.bak poupeai-infra/.env
               fi
 
             elif [ -d "poupeai-infra/.git" ]; then
               echo "Repositório existente encontrado. Atualizando..."
-              (cd poupeai-infra && sudo git reset --hard HEAD && sudo git pull)
+              (cd poupeai-infra && git reset --hard HEAD && git pull)
             
             else
               echo "Repositório não encontrado. Clonando..."
@@ -48,6 +48,6 @@ jobs:
             cd poupeai-infra
             
             echo "Aplicando configurações de infraestrutura..."
-            sudo docker compose -f docker-compose-production.yml up -d
+            docker compose -f docker-compose-production.yml up -d
             
             echo "Deploy de infraestrutura concluído."
