chore: configure min.io on local and production compose

--- a/.env.example
+++ b/.env.example
@@ -75,3 +75,13 @@ MAIL_SERVER=mailhog
 
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=admin
+
+#=======================================
+# MINIO (S3 STORAGE)
+#=======================================
+MINIO_ROOT_USER=admin
+MINIO_ROOT_PASSWORD=minio_password
+MINIO_BUCKET=poupeai-receipts
+
+MINIO_BROWSER_REDIRECT_URL=http://${IP_ADDRESS}:9001
+MINIO_SERVER_URL=http://${IP_ADDRESS}:9000
