--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -155,6 +155,12 @@ services:
       INTERNAL_API_KEY: ${INTERNAL_API_KEY}
       KEYCLOAK_ISSUER: ${KEYCLOAK_ISSUER}
       KEYCLOAK_JWKS_URL: ${KEYCLOAK_JWKS_URL}
+      MINIO_ENDPOINT: ${MINIO_SERVER_URL}
+      MINIO_ACCESS_KEY: ${MINIO_ROOT_USER}
+      MINIO_SECRET_KEY: ${MINIO_ROOT_PASSWORD}
+      MINIO_BUCKET: ${MINIO_BUCKET}
+    extra_hosts:
+      - "${IP_ADDRESS}:host-gateway"
     depends_on:
       core-db:
         condition: service_healthy
@@ -213,6 +219,24 @@ services:
       FinancesService__TransactionsEndpoint: ${FINANCES_SERVICE_TRANSACTIONS_ENDPOINT}
       FinancesService__CategoryEndpoint: ${FINANCES_SERVICE_CATEGORY_ENDPOINT}
     restart: unless-stopped
+    networks:
+      - poupe-ai-network
+  
+  minio:
+    image: minio/minio:RELEASE.2024-11-07T00-52-20Z
+    container_name: minio-prod
+    restart: unless-stopped
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+      MINIO_SERVER_URL: ${MINIO_SERVER_URL}
+      MINIO_BROWSER_REDIRECT_URL: ${MINIO_BROWSER_REDIRECT_URL}
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
     networks:
       - poupe-ai-network
   
@@ -351,6 +375,7 @@ volumes:
   core_backups:
   keycloak_backups:
   prometheus_data:
+  minio_data:
 
 networks:
   poupe-ai-network:
