feat: add ingestion service on local compose

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ KEYCLOAK_AUTHORITY=http://keycloak:8080/realms/${KEYCLOAK_POUPEAI_REALM}
 KEYCLOAK_AUDIENCE=account
 
 # Listener do Keycloak
-CORE_SERVICE_URL=http://core-service:8000/api/internal/profiles
+CORE_SERVICE_URL=http://core-service:8085/api/internal/profiles
 INTERNAL_API_KEY=chave-secreta
 INTERNAL_HEADER_NAME=x-api-key
 
@@ -59,9 +59,11 @@ GEMINI_API_KEY=key
 DEEPSEEK_API_KEY=key
 REPORT_DB_CONNECTION_STRING=mongodb://...
 REPORT_DB_NAME=reports_db
-FINANCES_SERVICE_BASE_URL=http://core-service:8000
+FINANCES_SERVICE_BASE_URL=http://core-service:8085
 FINANCES_SERVICE_TRANSACTIONS_ENDPOINT=/api/v1/transactions/
 FINANCES_SERVICE_CATEGORY_ENDPOINT=/api/v1/categories/
+IN_CORE_SERVICE_URL=http://core-service:8085
+IN_REPORT_SERVICE_URL=http://reports-service:8081
 
 #=======================================
 # NOTIFICAÇÃO & LOGGING
