--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -153,6 +153,10 @@ services:
       dockerfile: Dockerfile
     container_name: core-service-local
     environment:
+      RABBITMQ_USER: ${RABBITMQ_USER}
+      RABBITMQ_PASSWORD: ${RABBITMQ_PASSWORD}
+      RABBITMQ_HOST: rabbitmq
+      RABBITMQ_PORT: 5672
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
       DB_NAME: ${DB_NAME}
