--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -197,6 +197,9 @@ services:
       MAIL_FROM_NAME: ${MAIL_FROM_NAME}
       MAIL_PORT: ${MAIL_PORT}
       MAIL_SERVER: ${MAIL_SERVER}
+      USE_CREDENTIALS: 'True'
+      MAIL_STARTTLS: 'True'
+      MAIL_SSL_TLS: 'False'
     depends_on:
       rabbitmq:
         condition: service_healthy
