--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -163,6 +163,10 @@ services:
       MINIO_ACCESS_KEY: ${MINIO_ROOT_USER}
       MINIO_SECRET_KEY: ${MINIO_ROOT_PASSWORD}
       MINIO_BUCKET: ${MINIO_BUCKET}
+      KEYCLOAK_SERVER_URL: ${KEYCLOAK_SERVER_URL}
+      KEYCLOAK_REALM: ${KEYCLOAK_REALM}
+      KEYCLOAK_CLIENT_ID: ${KEYCLOAK_CLIENT_ID}
+      KEYCLOAK_CLIENT_SECRET: ${POUPE_AI_BACKEND_CLIENT_SECRET}
     extra_hosts:
       - "${IP_ADDRESS}:host-gateway"
     depends_on:
