Add Keycloak admin user and password to config

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -167,6 +167,8 @@ services:
       KEYCLOAK_REALM: ${KEYCLOAK_REALM}
       KEYCLOAK_CLIENT_ID: ${KEYCLOAK_CLIENT_ID}
       KEYCLOAK_CLIENT_SECRET: ${POUPE_AI_BACKEND_CLIENT_SECRET}
+      KEYCLOAK_ADMIN_USER: ${KEYCLOAK_ADMIN_USER}
+      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
     extra_hosts:
       - "${IP_ADDRESS}:host-gateway"
     depends_on:
