--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ KEYCLOAK_DB_PASSWORD=password
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
 
+KEYCLOAK_ADMIN_CLIENT_ID=admin-cli
+
 KEYCLOAK_POUPEAI_REALM=poupe-ai
 KEYCLOAK_SERVER_URL=http://keycloak:8080
 KEYCLOAK_ISSUER=http://${IP_ADDRESS}:8080/realms/${KEYCLOAK_POUPEAI_REALM}
