--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -169,6 +169,12 @@ services:
       MINIO_ACCESS_KEY: ${MINIO_ROOT_USER}
       MINIO_SECRET_KEY: ${MINIO_ROOT_PASSWORD}
       MINIO_BUCKET: ${MINIO_BUCKET}
+      KEYCLOAK_SERVER_URL: ${KEYCLOAK_SERVER_URL}
+      KEYCLOAK_REALM: ${KEYCLOAK_POUPEAI_REALM}
+      KEYCLOAK_CLIENT_ID: ${KEYCLOAK_CLIENT_ID}
+      KEYCLOAK_CLIENT_SECRET: ${POUPE_AI_BACKEND_CLIENT_SECRET}
+      KEYCLOAK_ADMIN_USER: ${KEYCLOAK_ADMIN_USER}
+      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
     extra_hosts:
       - "${IP_ADDRESS}:host-gateway"
     depends_on:
@@ -342,6 +348,7 @@ services:
       - "9090:9090"
     networks:
       - poupe-ai-logging-network
+      - poupe-ai-network
 
   node-exporter:
     image: prom/node-exporter:v1.10.2
