--- a/logging/prometheus/prometheus.yml
+++ b/logging/prometheus/prometheus.yml
@@ -1,6 +1,6 @@
 global:
-  scrape_interval: 30s
-  evaluation_interval: 30s
+  scrape_interval: 15s
+  evaluation_interval: 15s
   scrape_timeout: 10s
 
   external_labels:
@@ -10,14 +10,29 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
-        labels:
-          service: 'prometheus'
-          environment: 'local'
 
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['node-exporter:9100']
+  
+  - job_name: 'poupeai-core-service'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['core-service-prod:8085', 'core-service-local:8085']
         labels:
-          service: 'node-exporter'
-          environment: 'local'
+          application: 'poupeai-core-service'
+  
+  - job_name: 'poupeai-notification-service'
+    metrics_path: '/metrics'
+    static_configs:
+      - targets: ['notification-service-prod:8001', 'notification-service-local:8001']
+        labels:
+          application: 'poupeai-notification-service'
+  
+  - job_name: 'poupeai-ingestion-service'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['ingestion-service-prod:8082', 'ingestion-service-local:8082']
+        labels:
+          application: 'poupeai-ingestion-service'
 
